controller cleanup, DTOs, mappers, pagination, validation